Attempt to fix background image jumping on mobile addres bar toggle

--- a/css/generic/graphics.css
+++ b/css/generic/graphics.css
@@ -8,20 +8,12 @@ body {
 
 body:after {
     content: "";
-    display: block;
     position: fixed;
-    top: 0;
-    left: 0;
     background-image: url(/images/rules-monochromatic.png);
     background-repeat: no-repeat;
     background-position: center;
-    background-size: cover;
     width: 100%;
     height: 100%;
     opacity: 0.15;
     z-index: -1;
-}
-
-.shadowed-from-left {
-    background: linear-gradient(to right, rgba(0, 0, 0, 0.15) 0%, rgba(0, 0, 0, 0) 100%);
 }
